feat: initial zkPredict implementation - private prediction markets on Aleo
Implemented a complete Wave 1 MVP for zkPredict, a privacy-first prediction market platform built on Aleo blockchain using zero-knowledge proofs.

Features:
- Leo smart contract with private betting and public market state
- Create markets with customizable end times
- Place private bets with dynamic odds calculation
- Market resolution by creators
- Claim winnings with proportional payouts
- Next.js frontend with Aleo Wallet Adapter integration
- Multi-wallet support (Leo, Puzzle, Soter, FoxWallet)

Smart Contract Architecture:
- Records: Bet, Winnings (private state)
- Mappings: markets, yes_pool, no_pool (public state)
- Transitions: initialize, create_market, place_bet, resolve_market, claim_winnings

Tech Stack:
- Leo v3.4.0 (Aleo smart contract language)
- Next.js 15.2.4
- Aleo Wallet Adapter (@demox-labs packages)
- Tailwind CSS + DaisyUI
- React Query for state management

Network: Aleo Testnet Beta

--- a/package.json
+++ b/package.json
@@ -1,7 +1,8 @@
 {
-  "name": "aleo_starter_template",
+  "name": "zkpredict",
   "private": true,
-  "version": "0.0.1",
+  "version": "0.1.0",
+  "description": "Private prediction markets on Aleo blockchain",
   "scripts": {
     "clean": "rimraf \"{node_modules,.next,out.cache}\"",
     "delete-local-modules": "rimraf ./node_modules/@demox-labs/aleo-wallet-adapter-react/node_modules ./node_modules/@demox-labs/aleo-wallet-adapter-reactui/node_modules ./.next",
