--- a/package.json
+++ b/package.json
@@ -24,6 +24,7 @@
     "@demox-labs/aleo-wallet-adapter-leo": "0.0.25",
     "@demox-labs/aleo-wallet-adapter-react": "0.0.22",
     "@demox-labs/aleo-wallet-adapter-reactui": "0.0.36",
+    "@supabase/supabase-js": "^2.93.2",
     "@tailwindcss/forms": "0.5.11",
     "@tailwindcss/typography": "0.5.19",
     "browserify-fs": "^1.0.0",
