--- a/vercel.json
+++ b/vercel.json
@@ -1,5 +1,5 @@
 {
-  "buildCommand": "npm run build",
+  "buildCommand": "npm run build -- --webpack",
   "devCommand": "npm run dev",
   "installCommand": "npm install",
   "framework": "nextjs"
