feat: improve UI responsiveness and simplify theme to dark/light only
- Replace theme selector with dark/light toggle button
- Fix wallet button sizing and proportions for all screen sizes
- Improve header responsiveness with better spacing and mobile layout
- Update main layout with proper container constraints
- Enhance MarketList responsiveness with better filter layout
- Add responsive breakpoints for mobile, tablet, and desktop
- Optimize button sizes across different screen sizes

--- a/tsconfig.json
+++ b/tsconfig.json
@@ -1,9 +1,12 @@
-
 {
   "compilerOptions": {
     "baseUrl": ".",
     "target": "es6",
-    "lib": ["dom", "dom.iterable", "esnext"],
+    "lib": [
+      "dom",
+      "dom.iterable",
+      "esnext"
+    ],
     "allowJs": true,
     "skipLibCheck": true,
     "strict": true,
@@ -14,10 +17,12 @@
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
-    "jsx": "preserve",
+    "jsx": "react-jsx",
     "incremental": true,
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": [
+        "./src/*"
+      ]
     }
   },
   "include": [
@@ -27,5 +32,7 @@
     "./src/**/*.ts",
     "./src/**/*.tsx"
   ],
-  "exclude": ["node_modules"]
+  "exclude": [
+    "node_modules"
+  ]
 }
