Add Bet record copy feature and clean up documentation
Changes:
- Add bet record paste and copy-to-clipboard functionality in PlaceBet component
- User can paste their Bet record from Leo Wallet and copy it for safekeeping
- Visual feedback with success state (Copied!) and icons
- Clean up repository by removing 15 unnecessary .md documentation files
- Keep only README.md in repo
- Update .gitignore to exclude CLAUDE.md (local development only)

This improves UX for saving bet records needed to claim winnings later.

--- a/.gitignore
+++ b/.gitignore
@@ -6,5 +6,5 @@ node_modules
 program/build
 program/backup
 
-# Claude Code documentation
-../CLAUDE.md
+# Claude Code documentation (local only)
+CLAUDE.md
