Migrate to @provablehq wallet adapters with multi-wallet support
Major upgrade from @demox-labs (0.0.x) to @provablehq (0.3.0-alpha):

Added wallet support:
- Shield Wallet (mobile-first, privacy-focused)
- Fox Wallet (multi-chain)
- Puzzle Wallet (dApp recommended)
- Soter Wallet (security-focused)
- Leo Wallet (existing)

API changes:
- useWallet().publicKey → useWallet().address
- requestTransaction() → executeTransaction()
- WalletProvider → AleoWalletProvider
- Transaction.createTransaction() → executeTransaction({ program, function, inputs, fee })

Updated 30 files:
- Core wallet setup (_app.tsx, types)
- All market components (PlaceBet, CreateMarket, ClaimWinnings, etc)
- Hooks (useBets, useParlays, useReputation)
- Utils (creditsHelper, transfers)

TypeScript: 0 errors
Net change: -434 lines (simplified transaction handling)

--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "description": "Private prediction markets on Aleo blockchain",
   "scripts": {
     "clean": "rimraf \"{node_modules,.next,out.cache}\"",
-    "delete-local-modules": "rimraf ./node_modules/@demox-labs/aleo-wallet-adapter-react/node_modules ./node_modules/@demox-labs/aleo-wallet-adapter-reactui/node_modules ./.next",
+    "delete-local-modules": "rimraf ./node_modules/@provablehq/aleo-wallet-adaptor-react/node_modules ./node_modules/@provablehq/aleo-wallet-adaptor-react-ui/node_modules ./.next",
     "configure-program": "tsc ./util/update-program.ts && node ./util/update-program.js",
     "build-program": "cd ./program && /home/mikenike/.cargo/bin/leo build",
     "copy-program": "tsc ./util/copy-program.ts && node ./util/copy-program.js",
@@ -20,11 +20,18 @@
     "prepare": "husky install"
   },
   "dependencies": {
-    "@demox-labs/aleo-wallet-adapter-base": "0.0.23",
-    "@demox-labs/aleo-wallet-adapter-leo": "0.0.25",
-    "@demox-labs/aleo-wallet-adapter-react": "0.0.22",
-    "@demox-labs/aleo-wallet-adapter-reactui": "0.0.36",
-    "@provablehq/sdk": "^0.9.16",
+    "@provablehq/aleo-types": "0.3.0-alpha.3",
+    "@provablehq/aleo-wallet-adaptor-core": "^0.3.0-alpha.2",
+    "@provablehq/aleo-wallet-adaptor-fox": "^0.3.0-alpha.2",
+    "@provablehq/aleo-wallet-adaptor-leo": "^0.3.0-alpha.3",
+    "@provablehq/aleo-wallet-adaptor-puzzle": "^0.3.0-alpha.2",
+    "@provablehq/aleo-wallet-adaptor-react": "^0.3.0-alpha.2",
+    "@provablehq/aleo-wallet-adaptor-react-ui": "^0.3.0-alpha.3",
+    "@provablehq/aleo-wallet-adaptor-shield": "^0.3.0-alpha.3",
+    "@provablehq/aleo-wallet-adaptor-soter": "^0.3.0-alpha.2",
+    "@provablehq/sdk": "0.9.15",
+    "@puzzlehq/sdk": "^1.0.0",
+    "@puzzlehq/sdk-core": "^1.0.4",
     "@supabase/supabase-js": "^2.93.2",
     "@tailwindcss/forms": "0.5.11",
     "@tailwindcss/typography": "0.5.19",
