Fix Vercel build: Remove problematic wallet adapters
Removed Fox, Puzzle, and Soter wallet adapters to fix build errors:
- @puzzlehq/sdk-core has export issues in production
- Focus on stable Leo and Shield wallet support

Changes:
- Removed @puzzlehq/sdk and @puzzlehq/sdk-core dependencies
- Removed @provablehq/aleo-wallet-adaptor-fox
- Removed @provablehq/aleo-wallet-adaptor-puzzle
- Removed @provablehq/aleo-wallet-adaptor-soter
- Updated @provablehq/sdk to ^0.9.16
- Simplified _app.tsx to only initialize Leo and Shield wallets

Build status: ✅ Success (exit code 0)
Wallets supported: Leo, Shield

--- a/package.json
+++ b/package.json
@@ -22,16 +22,11 @@
   "dependencies": {
     "@provablehq/aleo-types": "0.3.0-alpha.3",
     "@provablehq/aleo-wallet-adaptor-core": "^0.3.0-alpha.2",
-    "@provablehq/aleo-wallet-adaptor-fox": "^0.3.0-alpha.2",
     "@provablehq/aleo-wallet-adaptor-leo": "^0.3.0-alpha.3",
-    "@provablehq/aleo-wallet-adaptor-puzzle": "^0.3.0-alpha.2",
     "@provablehq/aleo-wallet-adaptor-react": "^0.3.0-alpha.2",
     "@provablehq/aleo-wallet-adaptor-react-ui": "^0.3.0-alpha.3",
     "@provablehq/aleo-wallet-adaptor-shield": "^0.3.0-alpha.3",
-    "@provablehq/aleo-wallet-adaptor-soter": "^0.3.0-alpha.2",
-    "@provablehq/sdk": "0.9.15",
-    "@puzzlehq/sdk": "^1.0.0",
-    "@puzzlehq/sdk-core": "^1.0.4",
+    "@provablehq/sdk": "^0.9.16",
     "@supabase/supabase-js": "^2.93.2",
     "@tailwindcss/forms": "0.5.11",
     "@tailwindcss/typography": "0.5.19",
